--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
         <title>Prodi Departemen Matematika</title>
-        <link rel="stylesheet" href="assets/style/style_project.css">
+        <link rel="stylesheet" href="assets/style.css">
     </head>
 <body>
     <header>
@@ -11,7 +11,7 @@
          <h1>Prodi Departemen Matematika Universitas Indonesia</h1>
          <p>veritas, probitas, iustitia.</p>
          <figure>
-            <img src="assets/image/Makara_of_Universitas_Indonesia.svg.png"
+            <img src="https://storage.googleapis.com/dicoding-storage-666/Makara_of_Universitas_Indonesia.svg.png"
             width="150" 
             height="150">
           </figure>
@@ -29,7 +29,7 @@
         <div id="content">
             <article id="matematika" class="card">
               <h2 id="matematika">Program Studi Matematika</h2>
-              <img src="assets/image/matematika.jpg" class="featured-image" alt="math">
+              <img src="https://storage.googleapis.com/dicoding-storage-666/matematika.jpg" class="featured-image" alt="math">
               <p>
                 Jurusan matematika merupakan ilmu tentang angka dan perhitungan yang mempelajari  kombinasi matematika murni dan terapan 
                 (pure vs applied mathematics) seperti aljabar, geometri, analisis matematika, statistika, komputasi, aktuaria, juga riset operasi. 
@@ -49,7 +49,7 @@
 
             <article id="statistika" class="card">
                 <h2 id="statistika">Program Studi Statistika</h2>
-                <img src="assets/image/Statistika.jpg" class="featured-image" alt="stat">
+                <img src="https://storage.googleapis.com/dicoding-storage-666/Statistika.jpg" class="featured-image" alt="stat">
                 <p>
                     Jurusan Statistika merupakan cabang ilmu matematika yang mempelajari bagaimana merencanakan, mengumpulkan, menganalisis, 
                     menginterpretasi, dan mempresentasikan data kemudian mengolahnya menjadi sebuah informasi yang bermanfat. Dalam Jurusan 
@@ -71,7 +71,7 @@
 
             <article id="aktuaria" class="card">
                 <h2 id="aktuaria">Program Studi Aktuaria</h2>
-                <img src="assets/image/aktuaria.jpg" class="featured-image" alt="aktu">
+                <img src="https://storage.googleapis.com/dicoding-storage-666/aktuaria.jpg" class="featured-image" alt="aktu">
                 <p>
                     Pada umumnya, jurusan aktuaria mempelajari ilmu yang berkaitan dengan asuransi, baik itu asuransi umum atau jiwa. 
                     Bukan hanya asuransi saja, program studi aktuaria ini mengajarkan para mahasiswanya untuk merancang solusi dari 
@@ -97,7 +97,7 @@
             <h2>About Me</h2>
             <p>Fauzan Hilmy Mulyawan</p>
             <figure>
-                <img src="assets/image/Fauzan_foto.JPG" width="200" 
+                <img src="https://storage.googleapis.com/dicoding-storage-666/Fauzan_foto.JPG" width="200" 
                 height="200">
             </figure>
             </header>
